--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "webpack-dev-server": "webpack-dev-server"
   },
   "devDependencies": {
+    "cjsx-loader": "^2.0.1",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.9.1",
     "flux": "^2.0.1",
