--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cjsx-loader": "^2.0.1",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.9.1",
+    "expose-loader": "^0.6.0",
     "flux": "^2.0.1",
     "immutable": "^3.7.1",
     "jsx-loader": "^0.13.1",
